# ChangeLog for dev-util/radare
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/radare/ChangeLog,v 1.9 2009/06/28 20:55:15 patrick Exp $

*radare-1.4.1 (28 Jun 2009)

  28 Jun 2009; Patrick Lauer <patrick@gentoo.org> +radare-1.4.1.ebuild,
  metadata.xml:
  Bump to 1.4.1, adding lua and vala support with useflags

*radare-1.4 (28 Jun 2009)

  28 Jun 2009; Patrick Lauer <patrick@gentoo.org> +radare-1.4.ebuild:
  Bump to 1.4, fixes #270469

  04 Apr 2009; Ioannis Aslanidis <iaslanidis@gentoo.org> metadata.xml:
  Fixed metadata.

*radare-1.2.2 (20 Mar 2009)

  20 Mar 2009; Ioannis Aslanidis <iaslanidis@gentoo.org>
  +radare-1.2.2.ebuild:
  Version bump.

  02 Mar 2009; Ioannis Aslanidis <iaslanidis@gentoo.org> metadata.xml:
  Removed KDE Herd as it makes no sense for them.

*radare-1.2.1-r1 (16 Feb 2009)

  16 Feb 2009; Ioannis Aslanidis <iaslanidis@gentoo.org>
  +files/radare-1.2.1-as-needed.patch, +radare-1.2.1-r1.ebuild:
  Added --as-needed patch. See bug #259090 for details. Thanks to ikelos at
  gentoo dot org for the patch.

*radare-1.2.1 (12 Feb 2009)

  12 Feb 2009; Ioannis Aslanidis <iaslanidis@gentoo.org> metadata.xml,
  +radare-1.2.1.ebuild:
  Version bump. Parallel build is bogus and creates race conditions. Created a
  local use flag to optionally build the gui. Currently there are a few missing
  dependencies that need to be fixed sooner or later for the gui to work
  properly.

*radare-0.9.9 (31 Jul 2008)

  31 Jul 2008; Ioannis Aslanidis <deathwing00@gentoo.org> +metadata.xml,
  +radare-0.9.9.ebuild:
  Initial version for testing purposes requested by upstream.
