@@ -3,12 +3,14 @@ DIST radare-0.9.9.tar.gz 1111964 RMD160 024c5905e9a856f126e88b0be501fb8ba0febf36
 DIST radare-1.2.1.tar.gz 1595561 RMD160 fbc2d2c130ab5402df9d88f8dcac179b23cb34a2 SHA1 8a685b8e219181aaccc2e0de88eea6de632ec6a5 SHA256 d89c2a7254d8a05341e1b2c4c9a5c5a07e3d150d664833dbcf6cc2b559d82def
 DIST radare-1.2.2.tar.gz 1595419 RMD160 3f3da03aa2aeb39d6fb7008174f3d03d4ec939b2 SHA1 9b806c2536b7b712aa9cff71c75e2675710e0178 SHA256 c43a286023a5d024f0328a721c7f469a5673ee18cb84bc640467057d128b4418
 DIST radare-1.4.1.tar.gz 1726020 RMD160 65184d7e70387aaab14214031f622885d0a34a62 SHA1 b9405e9157facb44e1570b138615a698ef7c0ed9 SHA256 b0d79991989d59b782c07ef134deb64094b798e967be8164f6ce9ebba154b0e0
+DIST radare-1.4.2.tar.gz 1732826 RMD160 5162e4dd35bfabd47448e1fe16a92fcbad8fdbfe SHA1 7cd6df9be1fa7eecc19cb561276e99694531edac SHA256 4d83810562edf16bbce7e5c25c63bfce84256511043527ffc17f8e4ee688ea26
 DIST radare-1.4.tar.gz 1719924 RMD160 e4c27fa2c824dea897cee5d3b12ef3e5c5c999ae SHA1 4eff668c0dac713b05f82a8b21a5b384443be4dd SHA256 6bb05ac27db7fc787e67dfedd46853188648a51a35ce99065e6bededd9eea9c3
 EBUILD radare-0.9.9.ebuild 594 RMD160 5e4d99c1e3aacaf5ad5625ce2e7ccef66ec24d5f SHA1 4dd0a043ffb6cfa9ab2825d40af2ec2f248e9785 SHA256 9e136b11c9a4df6363c5946f3268a5586b45ebb2d1b2338d3e3a1052e75bda18
 EBUILD radare-1.2.1-r1.ebuild 794 RMD160 a5cd9bcbaab58aa5e5064bc9caa73690abb5c772 SHA1 e442729544d037e47f481b2fdd252cfe9a2a9856 SHA256 6f52fdd1500ef849b1dcfb580dd0a8019c70376917505f1837f8a38f92401abe
 EBUILD radare-1.2.1.ebuild 688 RMD160 61ffcd7f97cd194ca20583584d45d2e48d4adc6e SHA1 4bb10a20224f5638d3db168d21af1e24843ffc73 SHA256 8bc3640ce91338b3a3882bd6062da7cb0d5589cb010ce0d8226f70a42b110072
 EBUILD radare-1.2.2.ebuild 690 RMD160 07fde3b4e828870ea46985e12f0aa69d288032e7 SHA1 6ece628d15ef712e603e20a766210d824b059599 SHA256 35f19e4b8e668de12a683c6d30ed37e57d52dcd79de936dd67ddda1714251661
 EBUILD radare-1.4.1.ebuild 745 RMD160 d9f745e5ca39ac7b2cc09044784c41b2db29dea8 SHA1 c5bd05b8189cb0456376f0cd608ea894b4deb89f SHA256 e8615944889f85da119211b630babf4869e780488265dc9a286fff58cf8255e7
+EBUILD radare-1.4.2.ebuild 749 RMD160 2248c7b4d95fe6f241593d57af1bb1a065efec7b SHA1 234f484ea04f1a94f599fe850c10272e6524319f SHA256 2d8ac92da36c20add2053804fc52a02d7ddb8f02c34161118feb8dda924d4d6f
 EBUILD radare-1.4.ebuild 684 RMD160 145b98dce2b3e5661ab39cf9cfd88deeaec3f0b3 SHA1 c85f669c27362baa6d1bb7b26fb3d62f1ab751cc SHA256 e22caffb0ea01d018be448f741c69da9c1fd300b31e1d380955297437b906bcf
-MISC ChangeLog 1667 RMD160 16df25b4f4b983ccc4b8913fcdae3b5d4442d90e SHA1 5e9cfe7d38f635feedf69be4fc7280268718cb56 SHA256 d4c35c6a305eaf622441cddaa01bd6ed6f34d40a413b31e306ec222848384c37
+MISC ChangeLog 1821 RMD160 b5b1990a0178bfeb7b50f253904f806d10c2bea1 SHA1 43ff438f1c9ea80e8693cd122a2773616a921fdc SHA256 d954fb982612ed7901d6cab50d9e1240e53162b6922044e90a5178347cb9db8d
 MISC metadata.xml 449 RMD160 34f3effe46ff24de87df6c13e71a9eccc11d1d3a SHA1 e91b4beb5f4e22a99d95ef8d2806d55ffae819e8 SHA256 f503757570c811846dbf0512348400b49f8f33cf54e25e6df0e83200018346b6
