@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/radare
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/radare/ChangeLog,v 1.9 2009/06/28 20:55:15 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/radare/ChangeLog,v 1.10 2009/07/25 10:58:13 deathwing00 Exp $
+
+*radare-1.4.2 (25 Jul 2009)
+
+  25 Jul 2009; Ioannis Aslanidis <iaslanidis@gentoo.org>
+  +radare-1.4.2.ebuild:
+  Version bump. Several improvements.
 
 *radare-1.4.1 (28 Jun 2009)
 
